# study-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  paths.py  pyproject.toml  sample.env
config/: agent.json  config.py  mcp.json  model.py  sandbox.py  settings.py  tool.py
day1/: agent.py  agent_config.py  cli.py  context.py  mcp_client.py  model.py  tool.py
day1/prompts/: context.md  preview.py  system.md  tools.md
day1/sandbox/: base.py  daytona_provider.py  docker_provider.py  logging.py  registry.py
day1/skills/: base.py  registry.py  validate.py  validator.py
day1/skills/datetime/: SKILL.md
day1/skills/location/: SKILL.md
day1/skills/research/: SKILL.md
day1/skills/sandbox/: SKILL.md
day1/skills/weather/: SKILL.md
day1/tools/: fetch_url.py  file_tool.py  location.py  registry.py  sandbox_tool.py  time_tool.py  weather.py  web_fetch.py  web_tool.py
docker/mcp-time/: Dockerfile
storage/app/: .gitignore
storage/app/context/: .gitignore  context.example.json  context.json
