[project]
name = "study-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=48.0.0",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.34.2",
    "tavily-python>=0.7.25",
]
